syntax = "proto3";
package mainchain.beacon.legacy;

import "gogoproto/gogo.proto";

option go_package = "github.com/unification-com/mainchain/x/beacon/legacy/v040";

// Beacon holds metadata about a registered beacon
message Beacon {
  uint64 beacon_id = 1;
  string moniker = 2;
  string name = 3;
  uint64 last_timestamp_id = 4;
  uint64 first_id_in_state = 5;
  uint64 num_in_state = 6;
  uint64 reg_time = 7;
  string owner = 8;
}

// BeaconTimestamp holds each hash submitted to a registered beacon
message BeaconTimestamp {
  uint64 timestamp_id = 1;
  uint64 submit_time = 2;
  string hash = 3;
}

// Params defines the parameters for the beacon module.
message Params {
  uint64 fee_register = 1;
  uint64 fee_record = 2;
  string denom = 3;
}